# TheBlackLibrary

./: LICENSE  README.md  go.mod  go.sum  go.work  go.work.sum
.github/workflows/: main.yaml
DNS/: dns.go  go.mod  main.go
Embedding/: go.mod
Embedding/Python/: main.go
Exploits/: go.mod
Exploits/Kuberentes/: go.mod
Exploits/Kuberentes/rce/: README.md  go.mod  rce.go
ICS/: go.mod
Kuberentes/: RCE.go
Networking/: go.mod  go.sum
Networking/DNS/: dns.go
Networking/MacID/: main.go
Networking/OddProxy/: .gitignore  main.go
Networking/PKI/: go.mod  pki_test.go
Networking/Socks5/: socks5.go
Networking/Socks5/src/: socks.h
Networking/TCP/: go.mod  tcp.go  tcp_tests.go
Networking/TCPForwarder/: README.md  main.go
OS/: go.mod
OS/PTY/: main.go
OddProxy/: README.md
OddProxy/reverse/: main.go
PKI/: go.mod  main.go  pki.go  pki_test.go
PTY/src/: pty.c  pty.h
ProofServer/: go.mod  main.go
ReverseTCP/: reverse.go
Socks5/: CMakeLists.txt  socks5.go
Socks5/src/: main.c
Web/auth/: handlers.go  main.go  user.go
dhcp/: dhcp.go
